--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,13 @@
     <link rel="icon" href="./logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="title" content="Happiness Center">
-    <meta name="description" content="">
-    <meta name="robots" content="index, follow">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="language" content="English">
-    <meta name="author" content="Yakshit">
+    <meta name="title" content="Happiness Center"/>
+    <meta name="description" content="The HH Dalai Lama Centre for Happiness is a place that enriches every being with joy, knowledge, optimism, success, and love. The mission of the centre is to empower students with the knowledge and foster their creativity so they can find happiness while overcoming obstacles in society."/>
+    <meta name="keywords" content="Happiness, Smile, Gratitude, Happiness Habits, Positivity, Career Skills, Mindfulness, IKIGAI,  Reading, Events, Fun activities and Games, Creativity"/>
+    <meta name="robots" content="index, follow"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="language" content="English"/>
+    <meta name="author" content="Yakshit"/>
    
     <!--
       manifest.json provides metadata used when your web app is installed on a
