--- a/public/index.html
+++ b/public/index.html
@@ -28,18 +28,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    
     <title>Happiness Center | Home</title>
-    <style>
-      div{
-        border: 1px solid red;
-      }
-    </style>
+    
   </head>
  
-  <body class="debug-screens">
+  <body >
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="debug-screens"></div>
+    <div id="root" ></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
