--- a/public/index.html
+++ b/public/index.html
@@ -30,12 +30,16 @@
     -->
     
     <title>Happiness Center | Home</title>
-    
+    <style>
+      div{
+        border: 1px solid red;
+      }
+    </style>
   </head>
  
-  <body >
+  <body class="debug-screens">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" ></div>
+    <div id="root" class="debug-screens"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
