landing Page done my side

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="language" content="English"/>
     <meta name="author" content="Yakshit"/>
-   
+    
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -30,11 +30,11 @@
     -->
     
     <title>Happiness Center | Home</title>
-    <style>
+    <!-- <style>
       div{
         border: 1px solid red;
       }
-    </style>
+    </style> -->
   </head>
  
   <body class="debug-screens">
