--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     
-    <title>Happiness Center | Home</title>
+    <title>Happiness Center CUIET</title>
     <!-- <style>
       div{
         border: 1px solid red;
